# homesite

./: .gitignore  LICENSE  README.md  clean_db_sqlite.sql  clean_up.sh  collect_video.py  db.sqlite3  ffmpeg.codecs  keywords.blacklist  requirements.txt  setup.cfg  site.conf  uwsgi.xml
custom_user/: admin.py  models.py
custom_user/migrations/: 0001_initial.py
deploy/: homesite-nginx
deploy/cert/: cert.key
homesite/: settings.py  urls.py
https/: apps.py  views.py
https/templates/: cert.html
live/: apps.py  views.py
manage_videos/: apps.py  import_videos.py  urls.py  views.py
manage_videos/templates/: import-videos.html  manage-videos.html
static/cert/: ca.cer  cert.cer
static/css/: common.css  my-player.css  pageidx.css  stylesheet.css  stylesheet.min.css  video-thumb.css
static/js/: create-table.js  flip.js  my-player.js  page-idx.js  pageidx.js  search-bar.js  video-thumb.js  video.min.js
tools/: ca.cer  ca.key  ca.srl  cert.cer  cert.key  cert.req  gen_crt.sh  glyph_views.py
tools/cert/: ca.key  ca.srl  cert.req
tools/templates/: glyph.html
util/: log.py
video/: file_path_hash_map.py  models.py  player_view.py  video_stream.py  views.py
video/migrations/: 0001_initial.py  0001_initial_squashed.py  0002_auto_20170307_0726.py  0002_delete_keywordcount.py  0003_video_need_convert.py  0004_auto_20170313_0840.py  0005_remove_video_need_convert.py  0006_video_rating.py
video/templates/: 404.html  500.html  login.html  nav.html  player.html  rating-detail.html  search-bar.html  static_include.html  video-index.html  (+1 more)
weather/: views.py
(+4 files in other folders)
