[metadata]
name = homesite 
summary = A home video site
description-file =
    README.md
author = Ethan Tang
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[flake8]
max-line-length = 120
builtins=file,unicode,unichr,reload

